<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20dp">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/set_avtar_dilog"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_20">

    </TextView>


    <TextView
        android:id="@+id/txtCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/camera_dilog"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_14">

    </TextView>


    <TextView
        android:id="@+id/txtGallary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCamera"
        android:drawableStart="@drawable/ic_gallery"
        android:drawablePadding="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/gallery_dilog"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_14">

    </TextView>


    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGallary"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_5dp"
        android:text="@string/cancle_dilog"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_16">

    </TextView>


</RelativeLayout>