<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignIn"
        style="@style/Text.heading1.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:text="@string/lbl_sign_up"
        android:textColor="@color/colorBlack"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_100dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUserAvatar"
                style="@style/userAvatarStyle"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icn_upload_user" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCamera"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_80dp"
                android:layout_marginTop="@dimen/dimen_80dp"
                android:src="@drawable/icn_camera"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlUserName"
                style="@style/Text.heading4.Medium"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tlLastName"
                app:layout_constraintTop_toBottomOf="@+id/imgUserAvatar">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editFullname"
                    style="@style/Text.heading4.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_first_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:nextFocusDown="@id/editLastName"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlLastName"
                style="@style/Text.heading4.Medium"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                app:layout_constraintLeft_toRightOf="@+id/tlUserName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUserAvatar">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editLastName"
                    style="@style/Text.heading4.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_last_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmailAddress"
                style="@style/Text.heading4.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlUserName">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editEmail"
                    style="@style/Text.heading4.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                style="@style/Text.heading4.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlEmailAddress">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editPassword"
                    style="@style/Text.heading4.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiAddress"
                style="@style/Text.heading4.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlPassword">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editAddress"
                    style="@style/Text.heading4.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/primaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:elevation="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/tiAddress" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="400dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="60dp">
            </ProgressBar>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
